[package]
name = "malk"
version = "0.1.0"
authors = ["Isaac Azuelos <isaac@azuelos.ca>"]
edition = "2018"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies]
panic-halt = "0.2.0"
sparkfun-pro-micro = { git = "https://github.com/Rahix/avr-hal" }